--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,13 @@
+worker_rlimit_nofile 30000;
 user  www-data;
-worker_processes  auto;
+worker_processes  2;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections  4096;
 }
 
 
@@ -17,15 +18,13 @@ http {
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
-
     access_log  /var/log/nginx/access.log  main;
 
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
+    log_format kataribe '$remote_addr - $remote_user [$time_local] '
+ 			     '"$request" $status $body_bytes_sent '
+ 			     '"$http_referer" "$http_user_agent" $request_time';
+    access_log /var/log/nginx/kataribe.log kataribe;
+    #access_log off;
 
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*.conf;
