--- a/nginx/isucondition.conf
+++ b/nginx/isucondition.conf
@@ -23,6 +23,14 @@ server {
     gzip_http_version 1.1;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/gif image/svg-xml;
 
+    location /assets {
+        root /home/isucon/webapp/public/;
+        index index.html;
+    }
+    location = / {
+        root /home/isucon/webapp/public/;
+        index index.html;
+    }
     location / {
         proxy_set_header Host $http_host;
         proxy_pass http://127.0.0.1:3000;
