--- a/nginx/isucondition.conf
+++ b/nginx/isucondition.conf
@@ -4,7 +4,6 @@ server {
     ssl_certificate /etc/nginx/certificates/tls-cert.pem;
     ssl_certificate_key /etc/nginx/certificates/tls-key.pem;
 
-
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
@@ -28,6 +27,18 @@ server {
     #     index index.html;
     # }
     location /assets {
+        gzip off;
+        gzip_disable "msie6";
+        gzip_vary on;
+        gzip_proxied any;
+        gzip_comp_level 6;
+        gzip_buffers 16 8k;
+        gzip_http_version 1.1;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/gif image/svg-xml;
+        gzip_static on;
+        expires max;
+        add_header Pragma public;
+        add_header Cache-Control "public, must-revalidate, proxy-revalidate, max-age=10000000";
         root /home/isucon/webapp/public/;
         index index.html;
     }
