--- a/nginx/isucondition.conf
+++ b/nginx/isucondition.conf
@@ -12,6 +12,9 @@ server {
     client_max_body_size 10m;
     client_body_temp_path /dev/shm/client_body_temp 1 2;
 
+    proxy_cache_path /var/cache/nginx keys_zone=zone1:1m max_size=1g inactive=1m;
+    proxy_temp_path  /var/cache/nginx_tmp;
+
     # gzip on;
     gzip off; # !!!!
     gzip_disable "msie6";
@@ -41,6 +44,14 @@ server {
         add_header Cache-Control "public, must-revalidate, proxy-revalidate, max-age=10000000";
         root /home/isucon/webapp/public/;
         index index.html;
+    }
+    location = /api/trend {
+        proxy_cache_valid 200 1s;
+        proxy_cache zone1;
+        add_header Pragma public;
+        add_header Cache-Control "public, must-revalidate, proxy-revalidate, max-age=1";
+        proxy_set_header Host $http_host;
+        proxy_pass http://127.0.0.1:3000;
     }
     location / {
         proxy_set_header Host $http_host;
