move cache_path

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,6 +26,9 @@ http {
     access_log /var/log/nginx/kataribe.log kataribe;
     #access_log off;
 
+    proxy_cache_path /var/cache/nginx keys_zone=zone1:1m max_size=1g inactive=1m;
+    proxy_temp_path  /var/cache/nginx_tmp;
+
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*.conf;
 }
