--- a/nginx/isucondition.conf
+++ b/nginx/isucondition.conf
@@ -42,14 +42,14 @@ server {
         root /home/isucon/webapp/public/;
         index index.html;
     }
-    location = /api/trend {
-        proxy_cache_valid 200 1s;
-        proxy_cache zone1;
-        add_header Pragma public;
-        add_header Cache-Control "public, must-revalidate, proxy-revalidate, max-age=1";
-        proxy_set_header Host $http_host;
-        proxy_pass http://127.0.0.1:3000;
-    }
+    # location = /api/trend {
+    #     proxy_cache_valid 200 1s;
+    #     proxy_cache zone1;
+    #     add_header Pragma public;
+    #     add_header Cache-Control "public, must-revalidate, proxy-revalidate, max-age=1";
+    #     proxy_set_header Host $http_host;
+    #     proxy_pass http://127.0.0.1:3000;
+    # }
     location / {
         proxy_set_header Host $http_host;
         proxy_pass http://127.0.0.1:3000;
