--- a/nginx/isucondition.conf
+++ b/nginx/isucondition.conf
@@ -12,6 +12,10 @@ server {
     client_max_body_size 10m;
     client_body_temp_path /dev/shm/client_body_temp 1 2;
 
+    proxy_buffer_size 32k;
+    proxy_buffers 50 32k;
+    proxy_busy_buffers_size 32k;
+
     # gzip on;
     gzip off; # !!!!
     gzip_disable "msie6";
