--- a/nginx/isucondition.conf
+++ b/nginx/isucondition.conf
@@ -1,8 +1,8 @@
 upstream app1 {
-   server isucondition-1.t.isucon.dev weight=10 max_fails=10000;
+   server isucondition-1.t.isucon.dev:3000 weight=10 max_fails=10000;
 }
 upstream app3 {
-   server isucondition-3.t.isucon.dev weight=10 max_fails=10000;
+   server isucondition-3.t.isucon.dev:3000 weight=10 max_fails=10000;
 }
 
 server {
