--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,13 +18,13 @@ http {
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
-    access_log  /var/log/nginx/access.log  main;
+    #access_log  /var/log/nginx/access.log  main;
 
     log_format kataribe '$remote_addr - $remote_user [$time_local] '
  			     '"$request" $status $body_bytes_sent '
  			     '"$http_referer" "$http_user_agent" $request_time';
-    access_log /var/log/nginx/kataribe.log kataribe;
-    #access_log off;
+    #access_log /var/log/nginx/kataribe.log kataribe;
+    access_log off;
 
     proxy_cache_path /var/cache/nginx keys_zone=zone1:1m max_size=1g inactive=1m;
     proxy_temp_path  /var/cache/nginx_tmp;
